Fixing the spacing of grid-spaced input labels

--- a/web/app/themes/ivoh/assets/styles/components/_forms.scss
+++ b/web/app/themes/ivoh/assets/styles/components/_forms.scss
@@ -12,6 +12,12 @@ form {
     + .form-row {
       margin-top: $beat;
     }
+
+    &.spaced {
+      label:not(.radio) {
+        left: $gutter + 4px;
+      }
+    }
   }
 
   .input-wrap {
